fix loop spacing

--- a/app/components/kv/view/index.styl
+++ b/app/components/kv/view/index.styl
@@ -386,4 +386,4 @@
   justify-content center
   min-width min-content
   min-height min-content
-  padding space(2) 0
+  padding 0
