--- a/app/components/kv/view/loops/index.styl
+++ b/app/components/kv/view/loops/index.styl
@@ -68,16 +68,16 @@
   border-right-style dotted
 
 .kv-loop-padding-top
-  margin-top 41px
+  margin-top 75px
 
 .kv-loop-padding-bottom
-  margin-bottom 41px
+  margin-bottom 75px
 
 .kv-loop-padding-left
-  margin-left 41px
+  margin-left 75px
 
 .kv-loop-padding-right
-  margin-right 41px
+  margin-right 75px
 
 .style-compact
   .kv-loop-single
@@ -111,16 +111,16 @@
     margin 4px
 
   .kv-loop-padding-top
-    margin-top 25px
+    margin-top 60px
 
   .kv-loop-padding-bottom
-    margin-bottom 25px
+    margin-bottom 60px
 
   .kv-loop-padding-left
-    margin-left 25px
+    margin-left 60px
 
   .kv-loop-padding-right
-    margin-right 25px
+    margin-right 60px
 
   .style-compact
     .kv-loop-single
